# Knight-Ruiz-Matrix-balancing-algorithm

./: CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.py  setup.py.in
.ci/: Dockerfile  Makefile  build_wheels_linux.sh  build_wheels_osx.sh
.github/workflows/: linux.yml  osx.yml  wheels_linux.yml  windows.yml
src/: KRBalancing.cpp  krbalancing.cpp  krbalancing.hpp
